package protoFile.chat.UseItemHorn1005;
message UseItemHornRequest{
     required int32 id=1;//角色id
     required int32 itemId=2;//喊话装备id
     required int32 itemTemplateId=3;//物品模板id
     required string hornContent=4;//喊话内容
}
message UseItemHornResponse{
     required bool result=1;
     optional string message=2;
}